--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   
-  <title>期末課題</title>
-  <link rel="stylesheet"href="mystyle2.css">
- <script src="ex7-1.js"></script> 
+ <!--- <title>後期課題</title>
+  <link rel="stylesheet"
+  href="mystyle2.css">
+ <script src="ex0-4.js"></script> 
  </head>
 
  <body>
@@ -14,16 +15,16 @@
 <h2>あいさつ！</h2>
  <input type="button" value="あいさつ" onclick="sayhello71();">
  <p>名前を入力！<input type="text" id="who71"></p>
- <h2>
+
    
-   
-   自己紹介ホームページへ</h2><br>
+<h2>おみくじのページへ</h2><br>
    <h3>
      下のアイコンをクリック！！！
    </h3>
    
-<p><a href="index2.html"><img src="./image/pig.png" width="300" hight="300" alt="自己紹介"></a></p><br>
+<p><a href="index2.html"><img src="./image/omikuzi.jpg" width="300" hight="300" alt="おみくじ"></a></p><br>
 
 
 </body> 
+--->
 </html>
