--- a/index2.html
+++ b/index2.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
  <link rel="stylesheet"href="mystyle1.css"> 
-  <script src="ex0-1.js">
-</script>
+  <script src="ex0-1.js"></script>
+  <script src="ex0-3.js"></script>
+
 </head>
 
 <body>
@@ -119,5 +120,14 @@
  <input type="button" value="みかん" onclick="fruit2();">
 <input type="button" value="メロン" onclick="fruit3();">
  
+
+<div id="wrapper">
+  <h1>おみくじ</h1>
+  <p>おみくじです。スタートボタンをクリックして始めよう！</p>
+  <div id="output"></div>
+  <div id="btn">START!</div>
+</div>
+<div id="overlay"></div>
+
 </body>
 </html>
